...
				android:layout_marginBottom="@dimen/notification_image_margin"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:gravity="center_horizontal|center_vertical"
	            android:src="@drawable/img_coffee_mug" />

		<TextView
			android:id="@+id/notification_extend_description"
			style="@style/NotificationExtendDescriptionFont"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/notification_description_marginVertical"
			android:layout_marginLeft="@dimen/notification_description_marginHorizontal"
			android:layout_marginRight="@dimen/notification_description_marginHorizontal"
			android:layout_marginBottom="@dimen/notification_description_marginVertical"
			android:gravity="center_vertical|center"
			android:visibility="gone"
			android:text="@string/notification_sample_text" />
	    
		<TextView
	        android:id="@+id/notification_description"
	        style="@style/NormalFont"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/notification_description_marginVertical"
	        android:layout_marginLeft="@dimen/notification_description_marginHorizontal"
	        android:layout_marginRight="@dimen/notification_description_marginHorizontal"
...
	        android:gravity="center_vertical|center"        
	        android:text="@string/notification_sample_text" />
	 
	    </LinearLayout>

	<Button
	    android:id="@+id/button_notification_period_end_extend"
		style="@style/ExtendButton"
	    android:layout_width="@dimen/button_notification_period_end_extend_width"
	    android:layout_height="@dimen/button_notification_period_end_extend_height"
	    android:layout_marginBottom="@dimen/button_notification_period_end_extend_marginBottom"
		android:stateListAnimator="@null"
	    android:layout_gravity="center_horizontal"
...
