<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start"
tools:context="com.colormindapps.rest_reminder_alarm.MainActivity">

...
			android:layout_above="@+id/timer_layout"
			android:layout_below="@id/info_button"
			android:gravity="center"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/period_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center"
				style="@style/TitleFont" />

			<TextView
				android:id="@+id/description_text"
				style="@style/NormalFont"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/description_text_marginTop"
				android:gravity="center_vertical|center" />
		</LinearLayout>
...
